Update index.html Ajout des métadonnées opengraph
Signed-off-by: Jean-Baptiste-Paris <ecrireajb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="fr">
 
 <head>
-	<title>Nina Carducci Photographe: Portfolio, Services & Contact</title>
-	<meta name="description" content="Explorez mon portfolio varié : portraits, affaires, mariages, concerts.
-	Mes services sur mesure capturent l'essence de chaque moment.
-	Contactez-moi pour une séance adaptée à vos besoins spécifiques.">
+	<!-- HTML Meta Tags -->
+	<title>Nina Carducci Photographe | Portfolio, Services & Contact</title>
+	<meta name="description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="#">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
+	<meta property="og:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta property="og:image" content="./assets/images/nina.png">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="#">
+	<meta property="twitter:url" content="#">
+	<meta name="twitter:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
+	<meta name="twitter:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="twitter:image" content="./assets/images/nina.png">
+        
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
