Update index.html Corrections opengraph
Signed-off-by: Jean-Baptiste-Paris <ecrireajb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
 	<!-- HTML Meta Tags -->
 	<title>Nina Carducci Photographe | Portfolio, Services & Contact</title>
-	<meta name="description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
 
 	<!-- Facebook Meta Tags -->
-	<meta property="og:url" content="#">
+	<meta property="og:url" content="https://jean-baptiste-paris.github.io/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
-	<meta property="og:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
-	<meta property="og:image" content="./assets/images/nina.png">
+	<meta property="og:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta property="og:image" content="https://jean-baptiste-paris.github.io/assets/images/camera.png">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta property="twitter:domain" content="#">
-	<meta property="twitter:url" content="#">
+	<meta property="twitter:domain" content="jean-baptiste-paris.github.io">
+	<meta property="twitter:url" content="https://jean-baptiste-paris.github.io/">
 	<meta name="twitter:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
-	<meta name="twitter:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent l'essence de chaque moment. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
-	<meta name="twitter:image" content="./assets/images/nina.png">
-        
+	<meta name="twitter:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="twitter:image" content="https://jean-baptiste-paris.github.io/assets/images/camera.png">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
