--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-w1920.jpg"
-							class="d-block w-100" alt="une foule à un concert">
+							class="d-block w-100" alt="une foule à un concert" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-w1920.jpg"
 							class="d-block w-100"
-							alt="des mariés s'embrassent au milieu de personnes qui les applaudissent">
+							alt="des mariés s'embrassent au milieu de personnes qui les applaudissent" loading="lazy"> 
 					</div>
 				</div>
 				<!-- <div class="carousel-inner">
@@ -144,7 +144,7 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 						alt="Photo d'un concert avec le public, un aperçu de la scène et les lumières rouges au plafond"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" srcset="
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w304.jpg 304w,
@@ -152,7 +152,7 @@
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w848.jpg 848w,
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 						alt="Portrait d'homme fier en costume 2 pièces"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" srcset="
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w304.jpg 304w,
@@ -160,7 +160,7 @@
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w848.jpg 848w,
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 						alt="Femme souriante dans un espace de travail au second plan d'une autre personne"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" srcset="
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w304.jpg 304w,
@@ -168,7 +168,7 @@
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w848.jpg 848w,
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 						alt="Photo de mariés se prennant les mains cadrée sur leurs mains"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" srcset="
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w304.jpg 304w,
@@ -176,7 +176,7 @@
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w848.jpg 848w,
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 						alt="Portrait rapproché de jeune homme fermant les yeux"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" srcset="
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w304.jpg 304w,
@@ -184,7 +184,7 @@
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w848.jpg 848w,
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
+					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 						alt="Des mariés riant main dans la main dans un jardin"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" srcset="
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w304.jpg 304w,
@@ -192,7 +192,7 @@
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w848.jpg 848w,
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
+					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 						alt="Portrait d'une jeune femme derrière au travers d'un grillage"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" srcset="
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w304.jpg 304w,
@@ -200,7 +200,7 @@
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w848.jpg 848w,
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 						alt="Chanteur en concert avec de la fumée et des effets de lumière au second plan"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" srcset="
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w304.jpg 304w,
@@ -208,7 +208,7 @@
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w848.jpg 848w,
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w1080.jpg 1080w"
 						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 						alt="Femme riant assis à un bureau avec son ordinateur portable"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" srcset="
 						./assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w304.jpg 304w,
@@ -300,7 +300,7 @@
 						./assets/images/camera-w890.png 890w,
 						./assets/images/camera-w1120.png 1120w"
 						sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
-						alt="appareil photo">
+						alt="appareil photo" loading="lazy">
 				</div>
 			</div>
 		</footer>
