--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				./assets/images/nina-w890.png 890w,
 				./assets/images/nina-w1120.png 1120w"
 					sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-					alt="Portrait de Nina Carducci">
+					alt="Portrait de Nina Carducci" loading="lazy">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
