--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
 	<!-- HTML Meta Tags -->
 	<title>Nina Carducci Photographe | Portfolio, Services & Contact</title>
-	<meta name="description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="description"
+		content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://jean-baptiste-paris.github.io/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
-	<meta property="og:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta property="og:description"
+		content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
 	<meta property="og:image" content="https://jean-baptiste-paris.github.io/assets/images/camera.png">
 
 	<!-- Twitter Meta Tags -->
@@ -18,14 +20,16 @@
 	<meta property="twitter:domain" content="jean-baptiste-paris.github.io">
 	<meta property="twitter:url" content="https://jean-baptiste-paris.github.io/">
 	<meta name="twitter:title" content="Nina Carducci Photographe | Portfolio, Services & Contact">
-	<meta name="twitter:description" content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="twitter:description"
+		content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
 	<meta name="twitter:image" content="https://jean-baptiste-paris.github.io/assets/images/camera.png">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"> -->
+	<link rel="preload" href="./assets/style.css" as="style" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
@@ -58,30 +62,30 @@
 						aria-label="Slide 3" class=""></button>
 				</div>
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-w1920.jpg"
+					<!-- <div class="carousel-item active">
+						<img src="./assets/images/slider/Compressed/ryoji-iwata-wuzjnov7t0g-unsplash-w300.webp"
 							class="d-block w-100" alt="un homme traversant un passage piéton">
-					</div>
-					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-w1920.jpg"
-							class="d-block w-100" alt="une foule à un concert" loading="lazy">
-					</div>
-					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-w1920.jpg"
-							class="d-block w-100"
-							alt="des mariés s'embrassent au milieu de personnes qui les applaudissent" loading="lazy"> 
-					</div>
-				</div>
-				<!-- <div class="carousel-inner">
+					</div> -->
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" srcset="
-							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-w300.jpg 300w,
-							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-w1140.jpg 1140w,
-							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-w1580.jpg 1580w,
-							./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-w1920.jpg 1920w"
+						<img src="./assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
+							./assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w300.webp 300w,
+							./assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1140.webp 1140w,
+							./assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1580.webp 1580w,
+							./assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1920.webp 1920w"
 							sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" class="d-block w-100"
 							alt="Un homme d'affaire traversant un passage piéton">
 					</div>
+					<div class="carousel-item">
+						<img src="./assets/images/slider/webp/edward-cisneros-3-h6-1npdgw-unsplash-w1920.webp"
+							class="d-block w-100" alt="une foule à un concert" loading="lazy">
+					</div>
+					<div class="carousel-item">
+						<img src="./assets/images/slider/webp/nicholas-green-npz8akkumdi-unsplash-w1920.webp"
+							class="d-block w-100"
+							alt="des mariés s'embrassent au milieu de personnes qui les applaudissent" loading="lazy">
+					</div>
+				</div>
+				<!-- <div class="carousel-inner">
 					<div class="carousel-item">
 						<div class="carousel-item">
 							<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" srcset="
@@ -119,11 +123,11 @@
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.png" srcset="
-				./assets/images/nina-w256.png 256w,
-				./assets/images/nina-w560.png 560w,
-				./assets/images/nina-w890.png 890w,
-				./assets/images/nina-w1120.png 1120w"
+				<img src="./assets/images/nina.webp" srcset="
+				./assets/images/nina-w256.webp 256w,
+				./assets/images/nina-w560.webp 560w,
+				./assets/images/nina-w890.webp 890w,
+				./assets/images/nina-w1120.webp 1120w"
 					sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
 					alt="Portrait de Nina Carducci" loading="lazy">
 			</div>
@@ -144,78 +148,81 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
-						alt="Photo d'un concert avec le public, un aperçu de la scène et les lumières rouges au plafond"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" srcset="
+						<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
+							alt="Photo d'un concert avec le public, un aperçu de la scène et les lumières rouges au plafond"
+							src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" srcset="
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w304.jpg 304w,
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w608.jpg 608w,
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w848.jpg 848w,
 						./assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
-						alt="Portrait d'homme fier en costume 2 pièces"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+							alt="Portrait d'homme fier en costume 2 pièces"
+							src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" srcset="
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w304.jpg 304w,
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w608.jpg 608w,
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w848.jpg 848w,
 						./assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
-						alt="Femme souriante dans un espace de travail au second plan d'une autre personne"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+							alt="Femme souriante dans un espace de travail au second plan d'une autre personne"
+							src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" srcset="
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w304.jpg 304w,
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w608.jpg 608w,
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w848.jpg 848w,
 						./assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
-						alt="Photo de mariés se prennant les mains cadrée sur leurs mains"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
+							alt="Photo de mariés se prennant les mains cadrée sur leurs mains"
+							src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" srcset="
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w304.jpg 304w,
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w608.jpg 608w,
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w848.jpg 848w,
 						./assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
-						alt="Portrait rapproché de jeune homme fermant les yeux"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
+							alt="Portrait rapproché de jeune homme fermant les yeux"
+							src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" srcset="
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w304.jpg 304w,
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w608.jpg 608w,
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w848.jpg 848w,
 						./assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
-						alt="Des mariés riant main dans la main dans un jardin"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
+							alt="Des mariés riant main dans la main dans un jardin"
+							src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" srcset="
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w304.jpg 304w,
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w608.jpg 608w,
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w848.jpg 848w,
 						./assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
-						alt="Portrait d'une jeune femme derrière au travers d'un grillage"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
+							alt="Portrait d'une jeune femme derrière au travers d'un grillage"
+							src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+							srcset="
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w304.jpg 304w,
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w608.jpg 608w,
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w848.jpg 848w,
 						./assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
-						alt="Chanteur en concert avec de la fumée et des effets de lumière au second plan"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
+							alt="Chanteur en concert avec de la fumée et des effets de lumière au second plan"
+							src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" srcset="
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w304.jpg 304w,
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w608.jpg 608w,
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w848.jpg 848w,
 						./assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
-						alt="Femme riant assis à un bureau avec son ordinateur portable"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" srcset="
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+							alt="Femme riant assis à un bureau avec son ordinateur portable"
+							src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+							srcset="
 						./assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w304.jpg 304w,
 						./assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w608.jpg 608w,
 						./assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w848.jpg 848w,
 						./assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w1080.jpg 1080w"
-						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					</a>
 				</div>
 			</div>
 			<div class="quote">
