Test performance slider sans srcset
Signed-off-by: Jean-Baptiste-Paris <ecrireajb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
+						<img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash-w300.webp"
+						class="d-block w-100" alt="Un homme d'affaire traversant un passage piéton">
+						<!-- <img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w300.webp 300w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1140.webp 1140w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1580.webp 1580w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1920.webp 1920w"
 							sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" class="d-block w-100"
-							alt="Un homme d'affaire traversant un passage piéton">
+							alt="Un homme d'affaire traversant un passage piéton"> -->
 					</div>
 					<div class="carousel-item">
 						<img src="/assets/images/slider/webp/edward-cisneros-3-h6-1npdgw-unsplash-w1920.webp"
