Update index.html Ajout des microdonnées Schema.org
Signed-off-by: Jean-Baptiste-Paris <ecrireajb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title>Nina Carducci Photographe | Portfolio, Services & Contact</title>
 	<meta name="description"
 		content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<meta name="language" content="fr-FR">
+
+
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://jean-baptiste-paris.github.io/">
@@ -33,12 +38,11 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<meta charset="UTF-8">
 </head>
 
 <body>
 	<header class="top-header">
-		<h1 class="name"><a href="/">Nina Carducci</a></h1>
+		<h1 class="name"><a href="/" rel="author">Nina Carducci</a></h1>
 		<nav class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -64,7 +68,7 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash-w300.webp"
-						class="d-block w-100" alt="Un homme d'affaire traversant un passage piéton">
+							class="d-block w-100" alt="Un homme d'affaire traversant un passage piéton">
 						<!-- <img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w300.webp 300w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1140.webp 1140w,
@@ -122,80 +126,78 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-						<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
-							alt="Photo d'un concert avec le public, un aperçu de la scène et les lumières rouges au plafond"
-							src="/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" srcset="
+					<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
+						alt="Photo d'un concert avec le public, un aperçu de la scène et les lumières rouges au plafond"
+						src="/assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" srcset="
 						/assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w304.jpg 304w,
 						/assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w608.jpg 608w,
 						/assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w848.jpg 848w,
 						/assets/images/gallery/aaron-paul-wnX-fXzB6Cw-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
-							alt="Portrait d'homme fier en costume 2 pièces"
-							src="/assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+						alt="Portrait d'homme fier en costume 2 pièces"
+						src="/assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" srcset="
 						/assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w304.jpg 304w,
 						/assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w608.jpg 608w,
 						/assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w848.jpg 848w,
 						/assets/images/gallery/ali-morshedlou-WMD64tMfc4k-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
-							alt="Femme souriante dans un espace de travail au second plan d'une autre personne"
-							src="/assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+						alt="Femme souriante dans un espace de travail au second plan d'une autre personne"
+						src="/assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" srcset="
 						/assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w304.jpg 304w,
 						/assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w608.jpg 608w,
 						/assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w848.jpg 848w,
 						/assets/images/gallery/jason-goodman-tHO1_OuKbg0-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
-							alt="Photo de mariés se prennant les mains cadrée sur leurs mains"
-							src="/assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
+						alt="Photo de mariés se prennant les mains cadrée sur leurs mains"
+						src="/assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" srcset="
 						/assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w304.jpg 304w,
 						/assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w608.jpg 608w,
 						/assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w848.jpg 848w,
 						/assets/images/gallery/hannah-busing-RvF2R_qMpRk-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
-							alt="Portrait rapproché de jeune homme fermant les yeux"
-							src="/assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
+						alt="Portrait rapproché de jeune homme fermant les yeux"
+						src="/assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" srcset="
 						/assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w304.jpg 304w,
 						/assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w608.jpg 608w,
 						/assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w848.jpg 848w,
 						/assets/images/gallery/ade-tunji-rVkhWWZFAtQ-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
-							alt="Des mariés riant main dans la main dans un jardin"
-							src="/assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item"
+						alt="Des mariés riant main dans la main dans un jardin"
+						src="/assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" srcset="
 						/assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w304.jpg 304w,
 						/assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w608.jpg 608w,
 						/assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w848.jpg 848w,
 						/assets/images/gallery/jakob-owens-SiniLJkXhMc-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
-							alt="Portrait d'une jeune femme derrière au travers d'un grillage"
-							src="/assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-							srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item"
+						alt="Portrait d'une jeune femme derrière au travers d'un grillage"
+						src="/assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" srcset="
 						/assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w304.jpg 304w,
 						/assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w608.jpg 608w,
 						/assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w848.jpg 848w,
 						/assets/images/gallery/nino-van-prattenburg--443cl1uR_8-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
-							alt="Chanteur en concert avec de la fumée et des effets de lumière au second plan"
-							src="/assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Concert" loading="lazy" class="gallery-item"
+						alt="Chanteur en concert avec de la fumée et des effets de lumière au second plan"
+						src="/assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" srcset="
 						/assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w304.jpg 304w,
 						/assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w608.jpg 608w,
 						/assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w848.jpg 848w,
 						/assets/images/gallery/austin-neill-hgO1wFPXl3I-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
-						<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
-							alt="Femme riant assis à un bureau avec son ordinateur portable"
-							src="/assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-							srcset="
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+					<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item"
+						alt="Femme riant assis à un bureau avec son ordinateur portable"
+						src="/assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" srcset="
 						/assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w304.jpg 304w,
 						/assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w608.jpg 608w,
 						/assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w848.jpg 848w,
 						/assets/images/gallery/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-w1080.jpg 1080w"
-							sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
+						sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" />
 					</a>
 				</div>
 			</div>
@@ -291,6 +293,33 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="/assets/maugallery.js"></script>
 	<script defer src="/assets/scripts.js"></script>
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "PhotographieStudio",
+			"name": "Nina Carducci Photographe",
+			"description": "Photographe professionnel proposant des services de portraits, mariages, affaires et concerts.",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "France"
+			},
+			"telephone": "05 56 67 78 89",
+			"image": "https://jean-baptiste-paris.github.io/assets/images/camera.png",
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": "44.8466192",
+				"longitude": "-0.6065683"
+			},
+			"url": "https://jean-baptiste-paris.github.io/",
+			"sameAs": [
+				"https://www.instagram.com/ninacarducci.photo/?hl=fr"
+			],
+			"openingHours": "Mo-Su 10:00-19:00"
+		}
+	</script>
 </body>
 
 </html>
