Udate index.html Calibrage des données chema.org Passage au tester RichSnippet OK
Signed-off-by: Jean-Baptiste-Paris <ecrireajb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script type="application/ld+json">
 		{
 			"@context": "https://schema.org",
-			"@type": "PhotographieStudio",
+			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photographe",
 			"description": "Photographe professionnel proposant des services de portraits, mariages, affaires et concerts.",
 			"address": {
@@ -21,7 +21,8 @@
 				"streetAddress": "68 avenue Alsace-Lorraine",
 				"addressLocality": "Bordeaux",
 				"postalCode": "33200",
-				"addressCountry": "France"
+				"addressRegion": "Nouvelle-Aquitaine",
+				"addressCountry": "FR"
 			},
 			"telephone": "05 56 67 78 89",
 			"image": "https://jean-baptiste-paris.github.io/assets/images/camera.png",
@@ -34,7 +35,8 @@
 			"sameAs": [
 				"https://www.instagram.com/ninacarducci.photo/?hl=fr"
 			],
-			"openingHours": "Mo-Su 10:00-19:00"
+			"openingHours": "Mo-Su 10:00-19:00",
+			"priceRange": "€€"
 		}
 	</script>
 
