--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
 		content="Portraits, affaires, mariages, concerts. Mes services sur mesure capturent vos moment importants. Contactez-moi pour une séance adaptée à vos besoins spécifiques !">
 	<meta name="twitter:image" content="https://jean-baptiste-paris.github.io/assets/images/camera.png">
 
+	<!-- Icon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/assets/favicon/site.webmanifest">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css"> -->
-	<link rel="preload" href="/assets/style.css" as="style" />
+	<link rel="preload" href="/assets/style.min.css" as="style" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="/assets/style.min.css">
@@ -105,15 +110,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash-w300.webp"
-							class="d-block w-100" alt="Un homme d'affaire traversant un passage piéton">
-						<!-- <img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
+						<img src="/assets/images/slider/webp/ryoji-iwata-wuzjnov7t0g-unsplash.webp" srcset="
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w300.webp 300w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1140.webp 1140w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1580.webp 1580w,
 							/assets/images/slider/webp/ryoji-iwata-wUZjnOv7t0g-unsplash-w1920.webp 1920w"
 							sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" class="d-block w-100"
-							alt="Un homme d'affaire traversant un passage piéton"> -->
+							alt="Un homme d'affaire traversant un passage piéton">
 					</div>
 					<div class="carousel-item">
 						<img src="/assets/images/slider/webp/edward-cisneros-3-h6-1npdgw-unsplash-w1920.webp"
@@ -317,8 +320,7 @@
 		</footer>
 	</main>
 	<script defer src="/assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script defer src="/assets/maugallery.js"></script>
 	<script defer src="/assets/scripts.js"></script>
 </body>
